syntax = "proto3";

package go.micro.api.users;

service Users {
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message User {
	string id = 1;					// uuid
	int64 created = 2;			// unix
	int64 updated = 3;			// unix
	string first_name = 4;
	string last_name = 5;
	string email = 6;
}

message ReadRequest {
}

message ReadResponse {
	User user = 1;
}

message UpdateRequest {
	User user = 1;
}

message UpdateResponse {
	User user = 1;
}

message DeleteRequest {
}

message DeleteResponse {
	User user = 1;
}
